fixing gap and styling logo a little

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,19 @@
+.card-link {
+    text-decoration: none; /* Remove underline */
+    display: inline-block; /* Or block/flex */
+    margin-bottom: -20px; /* Adjust this value */
+}
+.card {
+    padding: 0 20px;
+    margin-bottom: -30px;
+    padding-bottom: -30px;
+}
+
 .card-image {
     width: 200px;
-    border-radius: 5%;
+    border-radius: 3%;
+    margin-bottom: -30px;
+    padding-bottom: -30px;
 }
 
 .card-title {
