--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: url('/public/tree_elf.jpg');
@@ -16,4 +15,17 @@ code {
 
 .teaser-text {
   color: #fff;
+  font-size: 40px;
+  font-family: "Quintessential", serif;
+  font-weight: 400;
+  font-style: normal;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.grid {
+  margin: 0 auto;
+  justify-content: center;
+  gap: 40px;
+  height: 55vh;
 }
